# nsfp

./: .gitignore  CMakeInit.txt  CMakeLists.txt  README.md  pyproject.toml  setup.py
nsfp/: constants.py  extract.py  notation.py  nsf_build.py  nsfp.py
tests/: test_extract.py  test_notation.py
